# ChangeLog for app-text/texlive
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/texlive/ChangeLog,v 1.100 2012/05/07 01:03:41 aballier Exp $

  07 May 2012; Alexis Ballier <aballier@gentoo.org> texlive-2011.ebuild:
  mark ppc and ppc64 stable, it seems the meta package has been forgotten while
  all the deps are stable

  06 May 2012; Raúl Porcel <armin76@gentoo.org> texlive-2011.ebuild:
  ia64/s390/sh/sparc stable wrt #395735

  24 Apr 2012; Fabian Groffen <grobian@gentoo.org> texlive-2011-r1.ebuild:
  Add Prefix keywords, bug #410239

  21 Apr 2012; Markus Meier <maekke@gentoo.org> texlive-2011-r1.ebuild:
  add ~arm, bug #410239

  03 Apr 2012; Jeroen Roovers <jer@gentoo.org> texlive-2011-r1.ebuild:
  Marked ~hppa (bug #410239).

  30 Mar 2012; Alexis Ballier <aballier@gentoo.org> texlive-2011-r1.ebuild:
  depend on texlive-langcyrillic for serbian too, by Filip Brcic, bug #400817

*texlive-2011-r1 (30 Mar 2012)

  30 Mar 2012; Alexis Ballier <aballier@gentoo.org> +texlive-2011-r1.ebuild,
  metadata.xml:
  new revision depending on epspdf and texlive-pictures without it, bug #369745

  04 Mar 2012; Tobias Klausmann <klausman@gentoo.org> texlive-2011.ebuild:
  Stable on alpha, bug #395735

  29 Jan 2012; Markus Meier <maekke@gentoo.org> texlive-2011.ebuild:
  arm stable, bug #395735

  17 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> texlive-2011.ebuild:
  x86 stable wrt bug #395735

  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org> texlive-2011.ebuild:
  Stable for amd64, wrt bug #395735

  28 Dec 2011; Jeroen Roovers <jer@gentoo.org> texlive-2011.ebuild:
  Stable for HPPA (bug #395735).

  11 Oct 2011; Alexis Ballier <aballier@gentoo.org> -texlive-2010.ebuild,
  -texlive-2010-r1.ebuild:
  remove old

  11 Oct 2011; Alexis Ballier <aballier@gentoo.org> texlive-2011.ebuild:
  carry on fbsd keywords
