@@ -1,15 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD texlive-2010-r2.ebuild 9270 RMD160 ffb4661cf3f435e090d7c7fe70c3ef31f96412dc SHA1 6c7128dbc9bcf9d13ebfa1aed7c9c715b35ccaf9 SHA256 a82aed1b05f434b7b9b00e62772e430decbe52bd3cbabd7ccce6a069f5bac36b
 EBUILD texlive-2011-r1.ebuild 9404 RMD160 0cd4c9cbb515393b516a753a1850d85c1a88a6a2 SHA1 551dfc94ac74c3bf8a1757c2c3323d12d87eef1a SHA256 c1560804810f5f4a9b983bcc82be954d3ce80dddbd1030d1a27b03b9c8d56777
 EBUILD texlive-2011.ebuild 9329 RMD160 977bf6f1b9e36036104da77f6c5c1ebc83054878 SHA1 5d205c5c5b5e110936012ecb8cdd7fd7e86b43d5 SHA256 12d979b03ea41aeaf52c27dd0961e5a80da4f03168bed20f42c9586dabe96055
-MISC ChangeLog 4115 RMD160 7b675f1fbeca0f88d40f84a0e1aa360d7e72a68e SHA1 5f5cc77001680dad623a730d1f2fe969ac2adb85 SHA256 af72145eac4a4e5c4bf90d6c1299448663056e84ba51680fa50ed69d1abe5237
-MISC metadata.xml 2444 RMD160 ba8a5c20b7a2a7e7927be875c30cbaab9dc584a0 SHA1 f019001238c40aa0abfb431ba562693f74dcee22 SHA256 7ffead2198c17b6f09605fc135af59853e3d73e1c6803b449a37cf1d9b16eb65
+MISC ChangeLog 4206 RMD160 d55cc72189d4643476b1a99c751af61b56fb9741 SHA1 f99b73ac3ca9d804e95586b505e0eaf7f50844b5 SHA256 ccc69c86e7f829461ae3c0bf6d3596b99582f9d023ecd70e26305e66b8bdb2b0
+MISC metadata.xml 2349 RMD160 b04999ae45eaeea68c2573c73e396ea194d8cb48 SHA1 de3f86c9f2041b85683d5ae666d8ad8b8532961b SHA256 760a583d23e7c1dc30c0e1430d0f773f6d9d93627a5d050851f86c270e960de0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk+nH3MACgkQvFcC4BYPU0qSVQCeKzSNPk1qrYaxeQjEPhJJ93l4
-begAnjgkiyyfuNkwuXCNJI1JueI8XJTt
-=irng
+iEYEARECAAYFAk+nICQACgkQvFcC4BYPU0q1ggCfToMm75WQTtYMSifsVLqrSUYA
+03EAoMgalidauv6byPsTDuFE/+GpEMQl
+=1ykB
 -----END PGP SIGNATURE-----
