@@ -21,8 +21,6 @@
     (<pkg>dev-texlive/texlive-humanities</pkg>)</flag>
   <flag name='jadetex'>Add support for <pkg>app-text/jadetex</pkg>
     (for processing tex files produced by the TeX backend of Jade)</flag>
-  <flag name='latex3'>Add support for LaTeX3
-	  (<pkg>dev-texlive/texlive-latex3</pkg>)</flag>
   <flag name='luatex'>Add extra support for luatex</flag>
   <flag name='music'>Add support for music typesetting
     (<pkg>dev-texlive/texlive-music</pkg>)</flag>
