@@ -1,6 +1,9 @@
 # ChangeLog for app-text/texlive
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/texlive/ChangeLog,v 1.100 2012/05/07 01:03:41 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/texlive/ChangeLog,v 1.101 2012/05/07 01:06:38 aballier Exp $
+
+  07 May 2012; Alexis Ballier <aballier@gentoo.org> -texlive-2010-r2.ebuild:
+  remove old
 
   07 May 2012; Alexis Ballier <aballier@gentoo.org> texlive-2011.ebuild:
   mark ppc and ppc64 stable, it seems the meta package has been forgotten while
